--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body{
-    margin:0px;
+    margin-top:0px;
+    margin-right:0px;
+    margin-left:0px;
     padding: 0px;
     height:100vh;
     background-color: pink;
   }
 html{
-    margin:0px;
+    margin-top:0px;
+    margin-right:0px;
+    margin-left:0px;
     padding: 0px;
     height:100vh;
     background-color: pink;
@@ -68,7 +72,6 @@ button{
   header{
     background-color: lightgray;
     margin: 0px;
-    padding: 0%;
   }
   footer{
     background-color: lightgray;
