--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     margin-top:0px;
     margin-right:0px;
     margin-left:0px;
+    margin-bottom:0px;
     padding: 0px;
     height:100vh;
     background-color: pink;
@@ -10,6 +11,7 @@ html{
     margin-top:0px;
     margin-right:0px;
     margin-left:0px;
+    margin-bottom:0px;
     padding: 0px;
     height:100vh;
     background-color: pink;
