--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ justify-content: center;
     font-size: 20px;
 }
 
-#startbutton {
+.prompt_button {
     display: inline-flex; /* Use inline flexbox to size dynamically based on content */
     align-items: center; /* Center vertically */
     margin: 20px 0; /* Add margin */
@@ -283,11 +283,10 @@ justify-content: center;
     border-radius: 4px; /* Rounded corners */
     transition: background-color 0.3s ease; /* Transition effect */
     cursor: pointer;
-    position: absolute; /* Position absolutely */
     left: 20px; /* Position from the left */
     top: 82px; /* Position from the top */
 }
-#startbutton:hover {
+.prompt_button:hover {
     background-color: #b78d62; /* Darker shade on hover */
 }
 
