--- a/html/style.css
+++ b/html/style.css
@@ -67,7 +67,7 @@ p {
 
 
 #submitbutton {
-    width: 200px;
+    width: 27%;
     height: 50px;
     font-size: 18px; /* Slightly larger font size for button */
     background-color: #522e03; /* A more vibrant button color */
